# ytscribe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-22-phase-0-library.md
docs/superpowers/specs/: 2026-05-22-phase-0-library-design.md
src/ytscribe/: __init__.py  _ytdlp.py  audio.py  captions.py  cli.py  config.py  fetch.py  logging_setup.py  manifest.py  models.py  output.py  probe.py  sources.py
src/ytscribe/asr/: __init__.py  groq.py  local_whisper.py  openai.py
tests/: conftest.py  test_asr.py  test_audio.py  test_captions.py  test_cli.py  test_config.py  test_fetch.py  test_integration.py  test_logging_setup.py  test_manifest.py  test_models.py  test_output.py  test_probe.py  test_sources.py  test_ytdlp.py
